// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when header renders does not show authenticated user if session is not valid 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="header-content"
    >
      <a
        href="/"
      >
        <div
          class="logo"
        >
          République
          <br />
          Française
        </div>
        <div
          class="title"
        >
          <h1>
            Secretariat
          </h1>
          <p>
            Gestion des comptes de la Fabrique Numérique
          </p>
        </div>
      </a>
      <nav />
    </div>
  </header>
</div>
`;

exports[`when header renders does show authenticated user if session is valid 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="header-content"
    >
      <a
        href="/"
      >
        <div
          class="logo"
        >
          République
          <br />
          Française
        </div>
        <div
          class="title"
        >
          <h1>
            Secretariat
          </h1>
          <p>
            Gestion des comptes de la Fabrique Numérique
          </p>
        </div>
      </a>
      <nav>
        <div
          class="authenticated-user"
        >
          <img
            alt="user avatar"
            data-nimg="1"
            decoding="async"
            height="44"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F59922165%3Fv%3D4&w=96&q=75"
            srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F59922165%3Fv%3D4&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F59922165%3Fv%3D4&w=96&q=75 2x"
            style="color: transparent;"
            width="44"
          />
          <div
            class="user-name-links"
          >
            <div>
              John Doe
            </div>
            <button
              class="link text-sm"
            >
              Déconnexion
            </button>
          </div>
        </div>
      </nav>
    </div>
    <div
      class="navigation"
    >
      <ul>
        <li>
          <a
            class="selected"
            href="/accounts"
          >
            <i
              class="ri-user-3-line text-xl leading-none align-sub mr-1"
            />
            Gestion des comptes
          </a>
        </li>
        <li>
          <a
            class=""
            href="/onboarding-requests"
          >
            <i
              class="ri-ship-line text-xl leading-none align-sub mr-1"
            />
            Demandes d'embarquement
          </a>
        </li>
        <li>
          <a
            class=""
            href="/logs"
          >
            <i
              class="ri-file-list-3-line text-xl leading-none align-sub mr-1"
            />
            Journal des actions
          </a>
        </li>
      </ul>
    </div>
  </header>
</div>
`;
